tests/cases/fail/bad_arg_type.p4
def takes_int(x: int) -> int:
    return x

def main() -> None:
    print(takes_int(2.5))
